oxiplate-derive/tests/broken/for/for-super.stderr
error: `super` is a reserved keyword
 --> tests/broken/for/for-super.rs:4:28
  |
4 | #[oxiplate_inline("{%- for super in numbers -%}{{ super }}{% endfor %}")]
  |                            ^^^^^
